index/css/index.css
/* html, body */
html,
body {
    background-image: linear-gradient(to top, #a7a6cb 0%, #8989ba 52%, #8989ba 100%);
    background-image: linear-gradient(to right, #3ab5b0 0%, #3d99be 31%, #56317a 100%);
    padding: 0;
    margin: 0;
    scroll-behavior: smooth;
    height: auto;
}
 
/* html, body  - end */

/* navarbar */
header {
    position: fixed;
    background-color: rgba(0, 0, 0, 0.7);
    width: 100%;
    z-index: 1;
    overflow: hidden; 
    height: 9vh;
}

.header-links { 
    margin-right: 15px; 
    float: right;
    
}

.header-title{ 
    margin-left: 40px; 
    float: left;
}

header a { 
    float: left;
    text-align: center;
    color: white;
    font-size: 26px; 
    font-family: proxima-nova, sans-serif;
    font-style: normal;
    font-weight: 700;
    text-decoration: none;
    cursor: pointer; 
    user-select: none; 
    font-size: 4.4vh; 
    line-height: 9vh;
    margin-right:15px;
}

.header-links a:hover {
    opacity: 0.9;
}

/* navar - end */

/* home section */
.section-home {
    min-height: 500px;  
    background-color: transparent;
    position: relative; 
    
}
 

.home-title-container {
    position: absolute;
    width: 100%; 
    height: 100%;
    display: flex; 
    justify-content: center;
    align-content: center;
    line-height:3500%;
}

.home-title-container h1 {
    
    color: white;
    vertical-align: middle;
    font-family: proxima-nova, sans-serif;
 
    font-size:4.8vw;  
}

/* home section - end */

/* about section */
.section-about {
    min-height: 470px;
    background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
    border-top: 1px solid white;
    position: relative;
}

#about-tab {
    background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
    background-size: 400% 400%;
    padding: 15px 15px 15px 15px;
    border-right: 1px solid white;
    position: absolute;
    left: 25px; 
}

/* about section - end */

/* work section */
.section-work {
    min-height: 469px;
    background-image: linear-gradient(120deg, #fccb90 0%, #d57eeb 100%);
    border-top: 1px solid white;
    position: relative;
}

#work-tab {
    background-image: linear-gradient(120deg, #fccb90 0%, #d57eeb 100%);
    background-position:center;
    background-size: 1000% 200%;
    padding: 15px 15px 15px 15px;
    border-left: 1px solid white;
    position: absolute;
    right: 25px; 
}

/* work section - end */

/* education section */
.section-education {
    background-image: linear-gradient(to top, #88d3ce 0%, #6e45e2 100%);
    border-top: 1px solid white;
    position: relative;
}

#education-tab {
    background-image: linear-gradient(to top, #88d3ce 0%, #6e45e2 100%);
    background-size: 1400% 1400%;
    background-position: top;
    padding: 15px 15px 15px 15px;
    border-right: 1px solid white;
    position: absolute;
    left: 25px; 
}

/* education section - end */

/* contact section */
.section-contact {
    min-height: 269px;
    background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
    position: relative;
}

#contact-tab {
    background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
    background-position:center;
    background-size: 1400% 1400%;
    padding: 15px 15px 15px 15px;
    position: absolute;
    right: 25px; 
    border-left: 1px solid white;  
}

/* contact section - end */

/* multi assigned classes */
.section {
    border-radius: 5px;
    box-shadow: 7px 7px 7px rgba(0, 0, 0, 0.3);
    margin: 15px;
    min-height:auto;
    margin: 35px;
}

.row {
    border-radius: 5px;
    display: block;
    position: relative;
    min-height: 470px;
    overflow: auto;
    min-height:auto;
}

.full-column {
    border-radius: 5px;
    width: 100%;
    float: left;
}

.content-image { 
    float:left;
}

.content-paragraph {
    padding: 24px 48px 20px 48px;
    line-height: 1.85em;
    background-color: white;
    
    margin: 15px;
    border-radius: 1px;
    float:left;

    /* height: 100%; */
}
 
.float-left {
    float: left;
}

.float-right {
    float: right;
}
 
.hide-if-mobile {
    display:none;
}

.hide-if-not-mobile {
    display:block;
}



.section-thematic-break {
    width: 80%;
    border-color: silver;
    opacity: 0.3;
}


p {
    font-size: 16px;
    font-family: proxima-nova, sans-serif;
    font-style: normal;
    font-weight: 400;
    color: #000;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;  

    font-size:16px;
    line-height: 1.75em;
}

/* @media (min-width: 992px) {  
    p {
        font-size: 20px;
    }
} */

.proxima-nova-regular {
    font-family: proxima-nova, sans-serif;
    font-style: normal;
    color: #000; 
}

.proxima-nova-bold {
    font-family: proxima-nova, sans-serif;
    font-style: normal;
    font-weight: 700;
    color: #000;
}

/* rubber stamp title */
.rubber {
    box-shadow: 0 0 0 3px red, 0 0 0 2px red inset;
    border: 2px solid transparent;
    border-radius: 4px;
    display: inline-block;
    padding: 5px 2px;
    line-height: 22px;
    color: red;
    font-size: 24px;
    font-family: 'Black Ops One', cursive;
    text-transform: uppercase;
    text-align: center;
    opacity: 0.6;
    width: 155px;
    width: 200px;
    transform: rotate(-5deg);
    position: relative;
    left: -25px;
}

.tab {
    position: absolute;
    display: inline-block;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px; 
    width:auto;
    top: -62px; 
    padding: 5px 10px 5px 10px!important;
} 

.tab h1 {
    color: black;
    font-family: proxima-nova, sans-serif;
    font-size: 46px;
    margin: 0 auto;
}

 .contact-links img {
     cursor: pointer;
 }

 .tools-used-list {
    padding: 0px;
    margin: 0 auto;
    list-style-type: none;
    font-size:18px;
    
}

.tools-used-list li {  
   width: auto; 
   border-radius: 3px;
   padding:2px 6px 2px 6px;
   margin: 5px 5px 5px 5px;
   float: left;
}


/* multi assigned classes - end */



@media (min-width: 992px) {  

    .tab { 
        padding: 15px!important;
    }
    
    .tab h1 { 
        font-size: 28px; 
    }
 
    header {  
        height: 63px;
    }

    header a {
        line-height: 63px;
        font-size: 33px;
    }

    
    .home-title-container {
        line-height:2800%;
    }

    .section-home {
        min-height: 64.5vh;
    }

    .section-home h1 {
        font-size:3.8vw;  
    }

    .hide-if-mobile {
        display:block;
    }
    .hide-if-not-mobile { 
        display:none;
    }
 
    .section {
        margin: 0px 85px 45px 85px;
    }

    .row {
        display: flex;
        flex-wrap: nowrap;
        justify-content: space-between;
        align-items: stretch;
    }

    .content-paragraph {
        background-color: white;
        align-self: stretch; 
        min-height: inherit;
        margin: 25px;

        /* height: 100%; */
    }

    .content-image {
        align-self: stretch;
        margin: 5px; 
        width: 50%;
        padding: 24px 48px 20px 48px;
        min-height: inherit;
        display: flex;
        flex-direction: column;
        justify-content: center;
    }
}

